...
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.IncomeFragment"
    android:id="@+id/fragment_i">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

...
                android:layout_marginEnd="210dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp">

                <ImageView
                    android:id="@+id/manage_background"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_background" />

                <ImageView
                    android:id="@+id/manage"
...
                android:layout_marginEnd="108dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp">

                <ImageView
                    android:id="@+id/part_time_background"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_background" />

                <ImageView
                    android:id="@+id/part_time"
...
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/income_money"
                android:layout_width="338dp"
                android:layout_height="match_parent"
                android:hint="请输入收入金额"
                android:inputType="number"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent" />
...
                android:textSize="30sp"
                tools:layout_editor_absoluteX="-3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/income_title"
                android:layout_width="313dp"
                android:layout_height="65dp"
                android:layout_marginBottom="84dp"
                android:gravity="left|center"
                android:hint="请输入标题"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/income_remark"
                android:layout_width="313dp"
                android:layout_height="65dp"
                android:layout_marginStart="96dp"
                android:layout_marginTop="88dp"
                android:gravity="left|center"
                android:hint="请输入备注"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/income_title"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/income_button"
            android:layout_width="210dp"
            android:layout_height="77dp"
            android:layout_marginBottom="76dp"
            android:backgroundTint="@android:color/black"
            android:text="记一笔"
            android:textSize="30sp"
...
