...
            android:layout_below="@id/text_account_name"
            android:layout_toRightOf="@id/text_account_month"
            android:text="xxm"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text_account_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="110dp"
            android:layout_toStartOf="@+id/imagebutton_delete"
            android:text="500"
...
            android:layout_height="79dp"
            android:layout_alignParentRight="true"
            android:scaleType="centerCrop"
            android:src="@drawable/delete_button" />

        <ImageButton
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_account_amount"
            android:layout_marginTop="-15dp"
            android:layout_marginEnd="7dp"
            android:layout_toStartOf="@+id/imagebutton_delete"
...
